# dwarf_reader

./: .gitignore  Abbrev.txt  CMakeLists.txt  Info.txt  README.md
cmake/function/: ut_add_test.cmake
scripts/: build_debug.ps1  build_release.ps1  clean.ps1  cmake_configure.ps1  vcpkg_install.ps1
source/: main.cpp
source/details/: bit_cast.hpp  iterator.hpp  type_list.hpp
source/dwarf/: dwarf5.hpp  dwarf_tags.hpp  leb128.h
source/dwarf/debug_abbrev/: attributes.hpp  debug_abbrev.hpp  debug_abbrev_table.hpp  dubug_abbrev_parser.hpp
source/dwarf/debug_abbrev/attribute/: attribute_base.hpp
source/dwarf/debug_info/: debug_info.hpp  die.hpp  dwarf_tags.hpp
source/dwarf/debug_info/unit_header/: full_and_partial_compilation_unit_header.hpp  type_unit_header.hpp  unit_header.hpp
source/dwarf/unit_header/: full_and_partial_compilation_unit_header.hpp  skeleton_and_split_compilation_unit_header.hpp  unit_header.hpp
source/pei/: dos_header.hpp  file_header.hpp  optional_header.hpp  pei.hpp  section_header.hpp  section_table.hpp
source/ut/: color.hpp  given.hpp  scenario.hpp  source_location.hpp  then.hpp  ut.hpp  when.hpp
tests/: CMakeLists.txt
tests/dwarf/: CMakeLists.txt  behaviour.cpp  tests_example_program_example_program_exe.h
tests/example_program/: CMakeLists.txt  example_program.cpp
tests/pei/: behaviour.cpp
